# SimulatorRISC-V

./: CMakeLists.txt  README.md
include/: decoder.hpp  elf_loader.hpp  execution.hpp  hart.hpp  inst.hpp  memory.hpp  regfile.hpp
include/core/: bb_cache.hpp  inst.hpp  regfile.hpp  segment.hpp
include/memory/: memory.hpp  mmu.hpp
include/stages/: decode_map.hpp  decoder.hpp  executor.hpp
include/utils/: cache.hpp  constants.hpp  macros.hpp  stack.hpp
source/: decoder.cpp  elf_loader.cpp  execution.cpp  executor.cpp  hart.cpp  main.cpp  memory.cpp
test/: 8_queens.c  8_queens.dump  easy_arithmetic.c  easy_arithmetic.dump  result.txt  test.dump
